# nlp-dataset-engine

./: .checkpoint_final.txt  .gitignore  LICENSE  README.md  clean_dataset.jsonl  main.py  pyproject.toml  raw_data.csv  test.txt
.github/workflows/: ci.yml  publish.yml
.gitignore/: output.jsonl
.gitignore/nlp_dataset_engine.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
src/nlp_dataset_engine/: benchmark.py  checkpoint.py  cli.py  compression.py  crawler.py  data_loader.py  hashing.py  jsonl_writer.py  loader.py  manifest.py  sharder.py  stats.py  streamer.py  validators.py
src/nlp_dataset_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/nlp_engine/: cli.py  data_loader.py  validator.py
tests/: test_benchmark.py  test_crawler.py  test_integrity.py  test_loader.py  test_stats.py  test_streamer.py
