[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp-engine-yuvraj"
version = "0.1.0"
description = "High-performance streaming NLP dataset ingestion engine"
authors = [{ name = "Yuvraj" }]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "tqdm>=4.0.0",
    "langdetect>=1.0.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "flake8"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
nlp-engine = "nlp_dataset_engine.cli:main"
